@@ -31,6 +31,16 @@ module Gluon
   autoload :Validation, 'gluon/validation'
   autoload :Validator, 'gluon/validation'
   autoload :Web, 'gluon/web'
+
+  def self.use_memoization
+    Controller.memoize :find_path_filter
+    Controller.memoize :find_path_block
+    Controller.memoize :find_view_export
+    Controller.memoize :find_form_export
+    Controller.memoize :find_action_export
+    TemplateEngine.class_eval{ memoize :create_engine }
+    nil
+  end
 end
 
 # Local Variables:
